--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body {
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
+.colour_opacity {
+  opacity: 0.5;
+}
+
 .controls .controls__range {
   margin-bottom: 30px;
 }
